--- a/JsTask/JsPhotoSlider/index.html
+++ b/JsTask/JsPhotoSlider/index.html
@@ -18,9 +18,9 @@
         <button id="btnNext" next-number=2>⇒</button>
     </div>
     <div class="container pt-1 gap-1 imgs">
-        <img id="img1" class="w-200 h-100 c-pointer" src="assets/images/1.jpg" alt="">
-        <img id="img2" class="w-200 h-100 c-pointer" src="assets/images/2.jpg" alt="">
-        <img id="img3" class="w-200 h-100 c-pointer" src="assets/images/3.jpg" alt="">
+        <img onclick="slaydShow(0);" class="w-200 h-100 c-pointer" src="assets/images/1.jpg" alt="">
+        <img onclick="slaydShow(1);" class="w-200 h-100 c-pointer" src="assets/images/2.jpg" alt="">
+        <img onclick="slaydShow(2);" class="w-200 h-100 c-pointer" src="assets/images/3.jpg" alt="">
     </div>
 
     <script src="assets/js/main.js"></script>
