--- a/JsTask/JsPhotoSlider/index.html
+++ b/JsTask/JsPhotoSlider/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container pt-3 gap-1">
         <button id="btnPrev" next-number=2>⇐</button>
-        <img class="slayd img-size c-pointer" src="assets/images/1.jpg" alt="">
-        <img class="slayd img-size c-pointer" src="assets/images/2.jpg" alt="">
-        <img class="slayd img-size c-pointer" src="assets/images/3.jpg" alt="">
+        <img class="slayd fade img-size c-pointer" src="assets/images/1.jpg" alt="">
+        <img class="slayd fade img-size c-pointer" src="assets/images/2.jpg" alt="">
+        <img class="slayd fade img-size c-pointer" src="assets/images/3.jpg" alt="">
         <button id="btnNext" next-number=2>⇒</button>
     </div>
     <div class="container pt-1 gap-1 imgs">
